@@ -3,38 +3,31 @@ package io.bootify.simple_crud.service;
 import io.bootify.simple_crud.domain.Article;
 import io.bootify.simple_crud.model.ArticleDTO;
 import io.bootify.simple_crud.repos.ArticleRepository;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Optional;
+
 
 @Service
 public class ArticleService {
 
-    @Autowired
-    private final ArticleRepository articleRepository;
+    private ArticleRepository articleRepository;
 
     public List<Article> getAllArticles() {
         return new ArrayList<>(articleRepository.findAll());
-    }
-
-    public ArticleService(final ArticleRepository articleRepository) {
-        this.articleRepository = articleRepository;
     }
 
     public List<ArticleDTO> findAll() {
         return articleRepository.findAll(Sort.by("code"))
                 .stream()
                 .map(article -> mapToDTO(article, new ArticleDTO()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ArticleDTO get(final Long code) {
@@ -49,8 +42,8 @@ public class ArticleService {
         return articleRepository.save(article).getCode();
     }
 
-    public void update(final Long code, final ArticleDTO articleDTO) {
-        final Article article = articleRepository.findById(code)
+    public void update(final ArticleDTO articleDTO) {
+        final Article article = articleRepository.findById(articleDTO.getCode())
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
         mapToEntity(articleDTO, article);
         articleRepository.save(article);
@@ -73,9 +66,13 @@ public class ArticleService {
         return article;
     }
 
-
     public Article getArticleByCode(Long code) {
         Optional<Article> article = articleRepository.findById(code);
         return article.isPresent() ? article.get() : null;
+    }
+
+    @Autowired
+    public void setArticleRepository(ArticleRepository articleRepository) {
+        this.articleRepository = articleRepository;
     }
 }
